1.8.24
------


1.8.23
------
(RB=162866)
Change FixedTemplate to output using ByteString.toString() instead of asAvroString
Add more test cases for generated DataTemplate.

(RB=163290)
Fix bug where @Optional on finder assocKeys was not respected.

(RB=164364)
Fix a bug in idl compatibility checker that marks previously required and currently optional field as incompatible.

(RB=126830)
Deprecate the "items" field for the query parameters in idl. Array parameters use standard pdsc array format.
To make it backwards compatibile, request builders can still use Iterable parameters.
Fix bug that builder methods with Iterable<? extends DataTemplate> parameter are not working.
Update build scripts.
Use Gradle 1.5.

(RB=130743)
Add special rule of idl compatibility checker to handle the deprecated "items" field.

1.8.22
------
(RB=162206)
fix logging message for D2

(RB=161556)
Use thread context classpath instead of pegasus classpath when using Class.forName on names of
coercers, validators and avro custom data translators.

(RB=161961)
Add copy() and clone() methods to generated non-record DataTemplates.
Generated record DataTemplates have had these methods since 1.8.4.

(RB=162841)
Adding new resource class is a backward compatible change now.
Add instruction message for idl compatibility check failure.

1.8.21
------
(RB=162036)
Fix UnsupportedOperationException from SimpleLoadBalancerSTate while creating transportClientProperties for https

1.8.20
------
(RB=161479)
made TARGET_SERVICE_KEY_NAME a public static variable

(RB=154752)
Fix bug where shutdown of HttpClientFactory will fail if the final
event leading to shutdown occurs on a Netty IO thread.

(RB=159386)
Support typerefs in association keys for batch responses.

(RB=160441)
Disable interning of field names by Jackson parser. 
This should reduce intended growth in perm gen.

(RB=160184)
Add embedded schema to Avro schema translated from Pegasus schema