@@ -9,11 +9,19 @@
       "name" : "customTypes2Id",
       "type" : "com.linkedin.restli.examples.typeref.api.CustomLongRef"
     },
-    "supports" : [ "batch_get", "get" ],
+    "supports" : [ "batch_create", "batch_delete", "batch_get", "batch_partial_update", "batch_update", "get" ],
     "methods" : [ {
       "method" : "get"
     }, {
+      "method" : "batch_create"
+    }, {
       "method" : "batch_get"
+    }, {
+      "method" : "batch_update"
+    }, {
+      "method" : "batch_partial_update"
+    }, {
+      "method" : "batch_delete"
     } ],
     "entity" : {
       "path" : "/customTypes2/{customTypes2Id}",
