@@ -20,16 +20,26 @@
 
 package com.linkedin.restli.examples.greetings.server;
 
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+import com.linkedin.restli.common.HttpStatus;
 import com.linkedin.restli.examples.custom.types.CustomLong;
 import com.linkedin.restli.examples.greetings.api.Greeting;
 import com.linkedin.restli.examples.typeref.api.CustomLongRef;
-import com.linkedin.restli.server.annotations.QueryParam;
+import com.linkedin.restli.server.BatchCreateRequest;
+import com.linkedin.restli.server.BatchCreateResult;
+import com.linkedin.restli.server.BatchDeleteRequest;
+import com.linkedin.restli.server.BatchPatchRequest;
+import com.linkedin.restli.server.BatchUpdateRequest;
+import com.linkedin.restli.server.BatchUpdateResult;
+import com.linkedin.restli.server.CreateResponse;
+import com.linkedin.restli.server.UpdateResponse;
 import com.linkedin.restli.server.annotations.RestLiCollection;
 import com.linkedin.restli.server.resources.CollectionResourceTemplate;
-
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Set;
 
 /**
  * @author Moira Tagle
@@ -61,4 +71,48 @@ public class CustomTypesResource2 extends CollectionResourceTemplate<CustomLong,
     return result;
   }
 
+  @Override
+  public BatchUpdateResult<CustomLong, Greeting> batchDelete(BatchDeleteRequest<CustomLong, Greeting> ids)
+  {
+    Map<CustomLong, UpdateResponse> results = new HashMap<CustomLong, UpdateResponse>();
+    for (CustomLong id: ids.getKeys())
+    {
+      results.put(id, new UpdateResponse(HttpStatus.S_204_NO_CONTENT));
+    }
+    return new BatchUpdateResult<CustomLong, Greeting>(results);
+  }
+
+  @Override
+  public BatchUpdateResult<CustomLong, Greeting> batchUpdate(BatchPatchRequest<CustomLong, Greeting> entityUpdates)
+  {
+    Map<CustomLong, UpdateResponse> results = new HashMap<CustomLong, UpdateResponse>();
+    for (CustomLong id: entityUpdates.getData().keySet())
+    {
+      results.put(id, new UpdateResponse(HttpStatus.S_204_NO_CONTENT));
+    }
+    return new BatchUpdateResult<CustomLong, Greeting>(results);
+  }
+
+  @Override
+  public BatchUpdateResult<CustomLong, Greeting> batchUpdate(BatchUpdateRequest<CustomLong, Greeting> entities)
+  {
+    Map<CustomLong, UpdateResponse> results = new HashMap<CustomLong, UpdateResponse>();
+    for (CustomLong id: entities.getData().keySet())
+    {
+      results.put(id, new UpdateResponse(HttpStatus.S_204_NO_CONTENT));
+    }
+    return new BatchUpdateResult<CustomLong, Greeting>(results);
+  }
+
+  @Override
+  public BatchCreateResult<CustomLong, Greeting> batchCreate(BatchCreateRequest<CustomLong, Greeting> entities)
+  {
+    List<CreateResponse> results = new ArrayList<CreateResponse>();
+    for (Greeting greeting: entities.getInput())
+    {
+      // just echo back the provided ids (for testing only,  this would not a correct implementation of POST)
+      results.add(new CreateResponse(new CustomLong(greeting.getId()), HttpStatus.S_204_NO_CONTENT));
+    }
+    return new BatchCreateResult<CustomLong, Greeting>(results);
+  }
 }
